# AMC-RFP-Phase3

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml  pr-validate.yml
docs/: AMC_RFP_Orchestrator_Project_Overview.pptx  AMC_RFP_Orchestrator_Project_Report.docx  DEV - AMC RFP and Portfolio Orchestrator.md  architecture.md  ci_cd_runbook.md  compliance_rubric.md  sample_invocation_walkthrough.md  user_guide.md
docs/mock-data/: doc_bln4.txt  doc_eqg1.txt  doc_inc2.txt  doc_smc3.txt
docs/postman/: amc_orchestrator.postman_collection.json
environments/: .env.dev.example  .env.prod.example  .env.staging.example
infra/terraform/: README.md
infra/terraform/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/terraform/github-oidc/: .terraform.lock.hcl  backend.hcl.example  deploy_role.tf  locals.tf  oidc_provider.tf  outputs.tf  plan_role.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
src/amc_orchestrator/: __init__.py  cli.py  main.py  runtime_entrypoint.py
tests/: conftest.py
tests/integration/: conftest.py  test_forced_escalation.py  test_graph_smoke.py  test_smc3_high_risk.py  test_ticker_not_found.py
tests/unit/: test_api_rfp.py  test_chroma_store.py  test_compliance_agent_retry.py  test_dynamodb_store.py  test_knowledge_base_store.py  test_model_factory.py  test_qual_store.py  test_quant_store.py  test_readiness.py  test_routing.py  test_runtime_entrypoint.py  test_settings.py  test_sqlite_store.py  test_tools.py
(+103 files in other folders)
