[project]
name = "amc-orchestrator"
version = "0.1.0"
description = "Institutional RFP & Client Portfolio Insight Orchestrator - a Strands Agents multi-agent system for AMC RFP response generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents[ollama,bedrock]>=1.47.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "chromadb>=0.5.20",
    "structlog>=24.4.0",
]

[project.scripts]
amc-orchestrator = "amc_orchestrator.main:run"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
ui = [
    "streamlit>=1.38.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a running Ollama server",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
